Bug 485118 - Always set the right minimum size for the scrollbar thumb. r=josh

--HG--
extra : rebase_source : 7e80754649ccb2a1d6064d8ee878d37bb248de21